<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_baseline_home_24"/>
    </group>
    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_myprofile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_myprofile"/>
            <item android:id="@+id/nav_change_pass"
                android:title="@string/nav_change_password"
                android:icon="@drawable/ic_changepass"/>
            <item android:id="@+id/nav_Logout"
                android:title="@string/nav_logout"
                android:icon="@drawable/logout"/>
        </menu>

    </item>

</menu>